# gCurve2D

./: .clangd  .gitignore  CMakeLists.txt  Dockerfile  README.md  gDel2D-README.txt
etc/: Dockerfile
gDel2D/src/: DelaunayChecker.cpp  HashTable.cpp  HashTable.h  InputCreator.cpp  Main.cpp  RandGen.cpp  RandGen.h  Visualizer.cpp  Visualizer.h
gDel2D/src/gDel2D/: GpuDelaunay.h  PerfTimer.h
gDel2D/src/gDel2D/GPU/: CudaWrapper.h  GpuDelaunay.cu  HostToKernel.h  KerCommon.h  KerDivision.cu  KerDivision.h  KerPredWrapper.h  KerPredicates.cu  KerPredicates.h  KerShewchuk.h  SmallCounters.cu  ThrustWrapper.h
src/: DelaunayChecker.h  InputCreator.h  Main.cpp  Visualizer.cpp  gCurve2D.cpp
src/data/: donut.xy  donut2.xy  olympics.xy  olympics_5000.xy  olympics_50000.xy
src/examples/: circumcenter.cpp  otr2_example.cpp  voronoi_example.cpp
src/gDel2D/: CommonTypes.h  CpuCurve.h  GpuCurve.h  GpuDelaunay.h
src/gDel2D/CPU/: CpuCurve.cpp  PredWrapper.cpp  PredWrapper.h  predicates.cpp
src/gDel2D/GPU/: CudaWrapper.h  DPredWrapper.h  GpuCurve.cu  GpuDelaunay.cu  KerPredWrapper.h  KerShewchuk.h  MemoryManager.h  SmallCounters.h  ThrustWrapper.cu  ThrustWrapper.h
