project(gCurve2d)
cmake_minimum_required(VERSION 3.12)
find_package(CGAL REQUIRED)
set(CMAKE_VERBOSE_MAKEFILE "ON")
ADD_EXECUTABLE(test_cgal src/examples/voronoi_example.cpp)
# target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${GLUT_LIBRARIES})
target_link_libraries(test_cgal CGAL::CGAL)
